[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Pages/ClientPage.gd" type="Script" id=1]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=2]

[node name="ClientPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Setup" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="CenterContainer" type="VBoxContainer" parent="Setup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 403.0
margin_top = 242.0
margin_right = 581.0
margin_bottom = 378.0
alignment = 1

[node name="Label" type="Label" parent="Setup/CenterContainer"]
margin_right = 178.0
margin_bottom = 14.0
text = "Enter Your Name:"

[node name="Name" type="LineEdit" parent="Setup/CenterContainer"]
margin_top = 18.0
margin_right = 178.0
margin_bottom = 42.0
text = "Swagmaster"

[node name="Label2" type="Label" parent="Setup/CenterContainer"]
margin_top = 46.0
margin_right = 178.0
margin_bottom = 60.0
text = "Enter the IP:"

[node name="IP" type="LineEdit" parent="Setup/CenterContainer"]
margin_top = 64.0
margin_right = 178.0
margin_bottom = 88.0
text = "127.0.0.1"

[node name="Connect" type="Button" parent="Setup/CenterContainer"]
margin_top = 92.0
margin_right = 178.0
margin_bottom = 112.0
text = "Connect"

[node name="Back" type="Button" parent="Setup/CenterContainer"]
margin_top = 116.0
margin_right = 178.0
margin_bottom = 136.0
text = "Back"

[node name="Lobby" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ReadyToRumble" type="CheckButton" parent="Lobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -20.0
margin_right = 38.0
margin_bottom = 20.0

[node name="Controller" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Virtual joystick" parent="Controller" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.5
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
joystick_mode = 1
action_left = "a"
action_right = "d"
action_up = "w"
action_down = "s"

[node name="Panel" type="Panel" parent="Controller"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Controller/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Grab" type="Button" parent="Controller/Panel/VBoxContainer"]
margin_right = 512.0
margin_bottom = 298.0
size_flags_vertical = 3
shortcut_in_tooltip = false
text = "Grab"

[node name="Special" type="Button" parent="Controller/Panel/VBoxContainer"]
margin_top = 302.0
margin_right = 512.0
margin_bottom = 600.0
size_flags_vertical = 3
shortcut_in_tooltip = false
text = "Special"

[connection signal="pressed" from="Setup/CenterContainer/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Setup/CenterContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Lobby/ReadyToRumble" to="." method="_on_ReadyToRumble_pressed"]
[connection signal="button_down" from="Controller/Panel/VBoxContainer/Grab" to="." method="_on_Grab_button_down"]
[connection signal="button_up" from="Controller/Panel/VBoxContainer/Grab" to="." method="_on_Grab_button_up"]
[connection signal="button_down" from="Controller/Panel/VBoxContainer/Special" to="." method="_on_Special_button_down"]
[connection signal="button_up" from="Controller/Panel/VBoxContainer/Special" to="." method="_on_Special_button_up"]
